# Production_Backend_Api

Production_Backend_Api/: .gitignore  Cargo.toml  README.md  database.db  tasks.db  tasks.db-shm  tasks.db-wal
Production_Backend_Api/migrations/: 20240101000000_create_items.sql
Production_Backend_Api/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
Production_Backend_Api/tests/: common.rs  items_api.rs
