[package]
name = "production_backend_api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A production-ready backend API with Axum and SQLite"

[dependencies]
# Web framework
axum = { version = "0.7.5", features = ["json"] }
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }
# Serialization/Deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
# Database
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
    "migrate",
] }
# Date and time
chrono = { version = "0.4.34", features = ["serde"] }
# Environment variables
dotenvy = "0.15.7"
# Error handling
anyhow = "1.0.80"
thiserror = "1.0.58"
# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# HTTP utilities
tower-http = { version = "0.5.1", features = ["cors", "trace"] }

# Validation
validator = { version = "0.18", features = ["derive"] }